# Expence-Tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
abstracts/: models.py
apps/abstracts/: apps.py  models.py  permissions.py
apps/auths/: admin.py  models.py  serializers.py  urls.py  views.py
apps/auths/migrations/: 0001_initial.py
apps/budget/: admin.py  apps.py  models.py
apps/budget/migrations/: 0001_initial.py  0002_rename_users_budget_user.py
apps/category/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/category/migrations/: 0001_initial.py  0002_rename_users_category_user.py
apps/data_generator/: apps.py
apps/data_generator/management/commands/: generate_test_data.py
apps/expense/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/expense/migrations/: 0001_initial.py  0002_rename_users_expense_user.py  0003_rename_categories_expense_category_and_more.py  0004_alter_expense_category.py
expence_traker/: admin.py  apps.py  models.py
expence_traker/management/commands/: generate_test_data.py
expence_traker/migrations/: 0001_initial.py
settings/: base.py  conf.py  urls.py
